# scrappy-backend

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  package-lock.json  package.json  prisma.config.ts  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1d7af2786390_add_scraping_jobs_table.py  3379ac35ea78_add_businesses_table.py  9cc2bb86934b_add_users_table_with_auth0_sub.py  a4f1c8e2d905_add_offers_pricing_and_orders_tables.py
app/application/services/: offer_service.py  order_service.py  pricing_service.py  scraping_job_service.py  user_service.py  webhook_service.py
app/application/workers/: business_normalizer.py  scraping_worker.py
app/domain/models/: business.py  current_user.py  offer.py  order.py  pricing.py  scraping_job.py  user.py
app/domain/repositories/: i_business_repository.py  i_offer_repository.py  i_order_repository.py  i_pricing_repository.py  i_scraping_job_repository.py  i_user_repository.py
app/infrastructure/: dependencies.py
app/infrastructure/auth/: auth0_jwt_verifier.py
app/infrastructure/aws/: s3_client.py  sfn_client.py
app/infrastructure/database/: orm_models.py  session.py
app/infrastructure/errors/: app_error.py  domain_validation_error.py
lambdas/: scraping_init_handler.py  scraping_mark_failed_handler.py  scraping_normalizer_handler.py  scraping_saver_handler.py  scraping_scraper_handler.py
openspec/changes/: SCRUM-6_backend.md  SCRUM-7_backend.md  SCRUM-8_backend.md  SCRUM-9-sfn-migration_backend.md  SCRUM-9_backend.md
openspec/specs/: api-spec.yml  backend-standards.mdc  data-model.md  deploy-guide.md  development_guide.md
prisma/: schema.prisma
src/: app.module.ts  lambda.ts  main.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
src/mail/: mail.service.ts
src/prisma/: prisma.service.ts
src/users/: users.repository.ts  users.service.ts
statemachine/: scraping_workflow.asl.json
test/: jest-e2e.json
test/auth/: auth.e2e-spec.ts
tests/: conftest.py
(+55 files in other folders)
